cluster/manifests/tempo/overlays/dev/memcached/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: memcached
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: memcached
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
---
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: mcrouter
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/component: mcrouter
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./tempo-memcached.tempo.svc.cluster.local
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
